rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldFail/syntax05/Test.java
// .result=COMPILE_FAIL
import java.util.*;


public class Test {
	
	interface A {
		ArrayList<Integer>[][] m(int i);
	}
	
	public static void main(String[] arg) {
		A a = List[][]::new;
	}

}